deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-frontend
  namespace: thetym
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-frontend
  template:
    metadata:
      labels:
        app: dev-frontend
    spec:
      containers:
      - name: dev-frontend
        image: docker.io/ramesh10654/dev-frontend:1.3
        ports:
        - containerPort: 80
