rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: dev-backend
  namespace: argo-rollouts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-backend
  template:
    metadata:
      labels:
        app: dev-backend
    spec:
      containers:
      - name: dev-backend
        image: docker.io/dinesh10275/dev-backend:v1.0
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "2"   # 2 CPU
            memory: "4Gi"  # 4 Gibibyte
          requests:
            cpu: "2"   # 1 CPU
            memory: "2Gi"  # 1 Gibibyte
      imagePullSecrets:
      - name: dockerhub-secret-backend
  strategy:
    canary:
      steps:
      - setWeight: 10
      - pause: 
          duration: 1m
