service.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-backend
  namespace: argo-rollouts
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30001
  selector:
    app: dev-backend
