dev-frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: dev-frontend
  name: dev-frontend-ingress
  namespace: thetym
spec:
  rules:
    - host: devnew.thetym.com
      http:
        paths:
          - backend:
              service:
                name: dev-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
