ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/instance: dev-frontend
  name: dev-frontend-ingress
  namespace: thetym
spec:
  ingressClassName: nginx
  rules:
    - host: devnew.thetym.com
      http:
        paths:
          - backend:
              service:
                name: dev-frontend
                port:
                  number: 80  # Change to 80 to match the service port
            path: /
            pathType: Prefix
